# open-hands-test

./: .env.example  .gitignore  Dockerfile  PROGRESS.md  README.md  STAGE3_PLAN.md  STAGE4_PLAN.md  STAGE5_PLAN.md  alembic.ini  async_hello.py  docker-compose.yml  functional_hello.py  hello_world.py  init.sql  interactive_hello.py  oop_hello_world.py  product_catalog_tz_full.md  push_branch.sh  pyproject.toml  requirements.txt  simple_hello_world.py
migrations/: env.py
migrations/versions/: cba64a26646b_initial_database_schema.py
src/: main.py
src/application/dtos/: __init__.py  attribute_dto.py  category_dto.py  product_dto.py
src/application/services/: __init__.py  cache_manager.py
src/application/use_cases/: attribute_use_cases.py  category_use_cases.py  product_use_cases.py
src/domain/entities/: attribute.py  base.py  category.py  permission.py  product.py  role.py  user.py
src/domain/repositories/: attribute_repository.py  base.py  category.py  product_repository.py  role_repository.py  user_repository.py
src/domain/value_objects/: attribute.py  category.py  common.py  email.py  product.py
src/infrastructure/auth/: __init__.py  auth_middleware.py  jwt_service.py  password_service.py  permission_checker.py
src/infrastructure/cache/: __init__.py  cache_service.py  category_cache.py  product_cache.py  redis_client.py  search_cache.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: connection.py  models.py
src/infrastructure/database/models/: __init__.py  base.py  role_model.py  user_model.py
src/infrastructure/database/repositories/: __init__.py  user_repository.py
src/infrastructure/repositories/: __init__.py  attribute_repository.py  category_repository.py  product_repository.py
src/presentation/api/v1/: attributes.py  cache.py  categories.py  (+1 more)
